--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 # PASTE YOUR GUILDED/DISCORD WEBHOOK URL AFTER THE `=` SIGN
-WEBHOOK_URL=
+WEBHOOK_URL= https://discord.com/api/webhooks/1223893811667796079/7DQ83aOvR_y-3N1lxKk5Xd_QSqm1ge9QaGTBGmcJeo02jfnhBEvRb2LdZkAu5GKYn88V
